2015-06-19 Martin Grønholdt

* fs/int_flash.c: Added amemcpy, to do aligned reads.
* 				 (aflash__read): Just use amemcpy, the SDK have long had a warning bout 4 byte alignement.


2015-06-19 Martin Grønholdt

* fs/int_flash.c: The new SDK stole flash_read from me, it's now aflash_read.
* fs/int_flash.h: flash_read renamed aflash_read.

2015-06-19 Martin Grønholdt

* driver: After update of SDK I needed the uart driver to since os_putc was gone.
* user_main.c (user_init): Init uart driver.
* slimhttp/http-fs.c (http_fs_get_handler): Wait till next run (after headers) to send message.


2015-06-18 Martin Grønholdt

* net/tcp.c (tcp_disconnect_cb): Only call call back if there is still a connection.
* sm_http.c (http_send): Added tcp_disconnect when state is HTTP_STATE_DONE.
* tools/missing_dec.h: Added ets_printf by modifying os_sprintf.
* user_config.h: After reading Peter Scargill blog post here http://tech.scargill.net/esp8266-debug/, I made some improvements.
* slighttp/http-fs.c: Almost done.


2015-06-17 Martin Grønholdt (committed)

* user_main.c (user_init): No auto reconnect.
* net/tcp.c (send_buffer): Renamed to tcp_send_buffer.
*			(tcp_send): Little bug in debug output, address of send_buffer instead of send_buffers.
*		   : Removed last traces of the timer and call back used for clean up earlier.
*			(tcp_disconnect_cb): Restored the original handler, that passes on questionable values. 
* net/tcp.h (send_buffer): Renamed to tcp_send_buffer.
* 			: Changed buffer to 1024 bytes.


2015-06-16 Martin Grønholdt

* net-/tcp.h: Added tcp_free.
*		    : Added state_names.
* sm_http.c: Implemented http_fs_destroy.
*          : Finished http_fs_test.
*           (http_response_handler): Renamed test_uri, will_handle.
*		    (http_response_handler): Split handler into handlers for each request method.
*									 And but them in array, that is ordered so that request_types
*									 works for indexing them, by subtracting one.